gcc/testsuite/rust/rustc/ui/issues/issue-45965.rs
fn main() {
    let a = |r: f64| if r != 0.0(r != 0.0) { 1.0 } else { 0.0 };
// { dg-error ".E0618." "" { target *-*-* } .-1 }
}

